// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading1 should match snapshot 1`] = `
.c0 {
  font-size: 29px;
  font-weight: 900;
  line-height: 450;
  color: #FFFFFF;
}

<h1
  className="c0"
/>
`;

exports[`Heading1 should render an Heading1 1`] = `
.c0 {
  font-size: 29px;
  font-weight: 900;
  line-height: 450;
  color: #4c4c4c;
}

<h1
  className="c0"
/>
`;
